Fixed installation errors. Using FetchContent_Populate instead of FetchContent_MakeAvailable.

--- a/mujoco_web/CMakeLists.txt
+++ b/mujoco_web/CMakeLists.txt
@@ -29,8 +29,11 @@ FetchContent_Declare(
     git apply ${CMAKE_CURRENT_SOURCE_DIR}/patches/libccd-${LIBCCD_VERSION}/0001-no-libm.patch
 )
 
-# Make the external project available
-FetchContent_MakeAvailable(libccd)
+# Fetch the content
+FetchContent_Populate(libccd)
+
+# Manually add the subdirectory with EXCLUDE_FROM_ALL
+add_subdirectory(${libccd_SOURCE_DIR} ${libccd_BINARY_DIR} EXCLUDE_FROM_ALL)
 
 ###############################################################################
 # mujoco
@@ -63,8 +66,11 @@ FetchContent_Declare(
     git apply ${CMAKE_CURRENT_SOURCE_DIR}/patches/mujoco-${MUJOCO_VERSION}/0005-no-ccd-fetch.patch
 )
 
-# Make the external project available
-FetchContent_MakeAvailable(mujoco)
+# Fetch the content
+FetchContent_Populate(mujoco)
+
+# Manually add the subdirectory with EXCLUDE_FROM_ALL
+add_subdirectory(${mujoco_SOURCE_DIR} ${mujoco_BINARY_DIR} EXCLUDE_FROM_ALL)
 
 ###############################################################################
 # mujoco_web
@@ -75,7 +81,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-option(JS_ONLY "Compiles to native JS (No WASM)" OFF)
+# option(JS_ONLY "Compiles to native JS (No WASM)" OFF)
 
 # Specify the directory where executable files are placed after they are built.
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/dist")
@@ -84,13 +90,6 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/dist")
 # run make install. 
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
 
-set(MUJOCO_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
-set(MUJOCO_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
-set(MUJOCO_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
-
-include_directories(${MUJOCO_INSTALL_INCLUDE_DIR})
-link_directories(${MUJOCO_INSTALL_LIB_DIR})
-
 add_compile_options(-pthread)
 set(EMCC_LINKER_FLAGS "-s ASSERTIONS=1 --bind -s ALLOW_MEMORY_GROWTH=1 -s EXPORT_ES6=1 -s MODULARIZE=1 -s FORCE_FILESYSTEM=1 -s EXPORTED_RUNTIME_METHODS=['FS','MEMFS'] -s EXPORT_NAME=load_mujoco -s EXCEPTION_CATCHING_ALLOWED=['load_from_xml']")
 set(CMAKE_REQUIRED_FLAGS "${EMCC_LINKER_FLAGS}")
@@ -98,5 +97,12 @@ set(CMAKE_REQUIRED_FLAGS "${EMCC_LINKER_FLAGS}")
 add_executable(mujoco_web src/main.cpp)
 set_target_properties(mujoco_web PROPERTIES LINK_FLAGS "${EMCC_LINKER_FLAGS}")
 
-target_link_libraries(mujoco_web ccd elasticity lodepng mujoco tinyxml2 qhullstatic_r)
-install(TARGETS mujoco_web DESTINATION ${DIVISIBLE_INSTALL_BIN_DIR})
+target_link_libraries(mujoco_web 
+  PRIVATE
+  ccd
+  elasticity
+  lodepng
+  mujoco
+  tinyxml2
+  qhullstatic_r
+)
