--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,8 +11,7 @@
         "env": {}
       },
       "group": {
-        "kind": "build",
-        "isDefault": true
+        "kind": "build"
       },
       "problemMatcher": []
     },
