--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ dist
 dist-ssr
 *.local
 public/wasm/
+.cache
+.mypy_cache
+.pytest_cache
 
 # Editor directories and files
 !.vscode/extensions.json
