--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "@types/emscripten": "^1.39.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
