--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "@types/emscripten": "^1.39.13",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.14",
     "three": "^0.170.0"
   },
   "devDependencies": {
