--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.3",
     "@types/emscripten": "^1.39.13",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
