Additional documentation. The method "buildThreeScene" does not call anymore the time-consuming method "loadMujocoScene" which now must be called explicitly.

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ dist-ssr
 .pytest_cache
 /src/wasm/mujoco_wasm.js
 /src/wasm/mujoco_wasm.wasm
-
+/src/wasm/mujoco_wasm.worker.mjs
 
 # Editor directories and files
 !.vscode/extensions.json
